<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/background_white"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:weightSum="16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_icon_globe" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/textColorGrayDark"
                    android:text="@string/introduce"
                    android:textSize="@dimen/textSizeTextInstroduceLanguge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/langue_vietnamese"
                    android:textColor="@color/textColorGrayDark"
                    android:textSize="40dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:alpha="0.2"
                    android:textColor="@color/textColorGrayDark"
                    android:text="@string/langue_english"
                    android:textSize="@dimen/textSizeLanguge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center"
                android:layout_margin="20dp">

                <TextView
                    android:id="@+id/btn_continute"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:background="@drawable/ic_button_continue_840x140"
                    android:textColor="@color/textColorInButton"
                    android:textSize="@dimen/textSizeButton"
                    android:text="Tiếp tục"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>