<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/linearLayout7"
    tools:context=".SignUp2Activity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1">

        <ImageView
            android:id="@+id/imageViewChangeComponent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_chevron_left_white_24dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_max="50dp"
            app:layout_constraintHeight_min="wrap"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="50dp"
            app:layout_constraintWidth_min="wrap"
            app:layout_constraintWidth_percent="0.12" />

        <TextView
            android:id="@+id/textViewComback"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/nav_comback"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintLeft_toRightOf="@+id/imageViewChangeComponent"
            app:layout_constraintStart_toEndOf="@+id/imageViewChangeComponent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.15" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/header_register_2"
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageViewChangeComponent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout18"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/backgrond_circler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="wrap"
            app:layout_constraintHeight_percent="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="wrap"
            app:layout_constraintWidth_percent="0.9">


            <ImageView
                android:id="@+id/imageView_capture"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_image_capture"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.395"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.6" />

            <TextView
                android:id="@+id/text_capture"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/txt_capture"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_capture"
                app:layout_constraintWidth_percent="0.5" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/edt_border"
                android:drawableLeft="@drawable/ic_icon_name_41x56"
                android:drawablePadding="12dp"
                android:gravity="center|left"
                android:hint="Họ tên"
                android:textColor="#000000"
                android:textColorHint="#dfdbdb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="wrap"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_capture"
                app:layout_constraintWidth_percent="0.85" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/edt_border"
                android:drawableLeft="@drawable/ic_icon_birthyear_42x51"
                android:drawablePadding="12dp"
                android:gravity="center|left"
                android:hint="Năm sinh"
                android:textColor="#000000"
                android:textColorHint="#dfdbdb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="wrap"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                app:layout_constraintWidth_percent="0.85" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/linearLayout19"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="wrap"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                app:layout_constraintWidth_percent="0.85">

                <TextView
                    android:id="@+id/text_genderselect"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/txt_genderselect"
                    android:textColor="#808080"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/tableRow"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/backgrond_circler"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/seg_one"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/ic_tabs_genderselect_1_true"
                        android:gravity="center"
                        android:text="Nữ"
                        android:textColor="@color/textColorInButton"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.33" />

                    <TextView
                        android:id="@+id/seg_two"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/ic_tabs_genderselect_2"
                        android:gravity="center"
                        android:text="Nam"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/seg_one"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.33" />

                    <TextView
                        android:id="@+id/seg_three"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/ic_tabs_genderselect_3"
                        android:gravity="center"
                        android:text="Khác"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/seg_two"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.34" />
                </android.support.constraint.ConstraintLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout18">

            <Button
                android:id="@+id/btn_continute"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/ic_button_continue_840x140"
                android:text="@string/btn_continue"
                android:textAllCaps="false"
                android:textColor="@color/textColorInButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>